--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
    GLOBAL STYLES
 ============================================ */
 body {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "IBM Plex Sans Thai", sans-serif, sans-serif;
   text-align: center;
   background-color: #f9f9f9;
   margin: 0;
@@ -13,7 +13,7 @@ body {
 =============================== */
 header {
   background-color: #459bec;
-  padding: 10px 0;
+  padding: 10px 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   opacity: 1;
 }
@@ -46,10 +46,11 @@ header {
 nav {
   display: flex;
   gap: 20px;
+  margin: 0;
 }
 
 nav a {
-  font-size: 1.2em;
+  font-size: 1.5em;
   font-weight: 500;
   color: #fff;
   text-decoration: none;
@@ -58,11 +59,9 @@ nav a {
   transition: background-color 0.3s, color 0.3s;
 }
 nav a:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  color: #fff;
+  color: #c70000;
 }
 nav a.active {
-  background-color: #ff6600;
   color: #fff;
   font-weight: bold;
 }
@@ -73,9 +72,15 @@ nav a.active {
 ============================================ */
 h1 {
   color: #459bec;
-  font-size: 3rem;
+  font-size: 3.5rem;
   margin: 0;
 }
+
+h2 {
+  font-size: 2rem;
+  margin: 0;
+}
+
 p {
   color: #666;
   margin: 0;
@@ -274,26 +279,26 @@ button,
     margin: 0 auto;
   }
 
-  .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-
   .logo img {
-    height: 50px; /* ลดขนาดโลโก้ให้พอดีมือถือ */
+    height: 40px; /* ลดขนาดโลโก้ให้พอดีมือถือ */
   }
 
   nav {
     margin-top: 10px;
     display: flex;
-    flex-direction: column;
     gap: 5px;
   }
 
+  h2 {
+    font-size: 1.5rem;
+  }
+
   nav a {
-    font-size: 1em;
+    font-size: 1.2em;
     padding: 6px 12px;
+  }
+
+  .footer p {
+    font-size: 0.5rem;
   }
 }
